Fix/increased contrast (#388)
* fix: increased caption contrast

* increased comment link and date contrast

* changed color of comment date var

--- a/source/sass/component/_comment.scss
+++ b/source/sass/component/_comment.scss
@@ -16,7 +16,7 @@
             margin: 0;
             font-size: 14px;
             font-weight: 600;
-            color: $color-dark;
+            color: $color-darker;
         }
     }
 
@@ -40,7 +40,7 @@
         }
 
         :hover {
-            color: $color-darker;
+            color: $color-darkest;
         }
     }
 
